--- a/gitops/apps/home-assistant/configuration/dashboards/subway.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/subway.yaml
@@ -12,33 +12,32 @@ views:
               show_header_toggle: false
             filter:
               template: |
-                {% set ns = namespace(north=[], south=[]) %}
-                {% for state in states.sensor -%}
-                  {%- if state.attributes.friendly_name is defined and ('Atlantic Av' in state.attributes.friendly_name or 'Barclays' in state.attributes.friendly_name) and state.state not in ['unavailable', 'unknown'] -%}
-                    {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                    {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
-                      {%- set ns.north = ns.north + [state] -%}
-                    {%- else -%}
-                      {%- set ns.south = ns.south + [state] -%}
-                    {%- endif -%}
-                  {%- endif -%}
-                {%- endfor %}
                 [
                   { "type": "section", "label": "Northbound" },
-                  {% for state in ns.north -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and ('Atlantic Av' in state.attributes.friendly_name or 'Barclays' in state.attributes.friendly_name) and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                   { "type": "section", "label": "Southbound" },
-                  {% for state in ns.south -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and ('Atlantic Av' in state.attributes.friendly_name or 'Barclays' in state.attributes.friendly_name) and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if not headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                 ]
             sort:
@@ -52,33 +51,32 @@ views:
               show_header_toggle: false
             filter:
               template: |
-                {% set ns = namespace(north=[], south=[]) %}
-                {% for state in states.sensor -%}
-                  {%- if state.attributes.friendly_name is defined and 'Bergen St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                    {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                    {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
-                      {%- set ns.north = ns.north + [state] -%}
-                    {%- else -%}
-                      {%- set ns.south = ns.south + [state] -%}
-                    {%- endif -%}
-                  {%- endif -%}
-                {%- endfor %}
                 [
                   { "type": "section", "label": "Northbound" },
-                  {% for state in ns.north -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and 'Bergen St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                   { "type": "section", "label": "Southbound" },
-                  {% for state in ns.south -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and 'Bergen St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if not headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                 ]
             sort:
@@ -92,33 +90,32 @@ views:
               show_header_toggle: false
             filter:
               template: |
-                {% set ns = namespace(north=[], south=[]) %}
-                {% for state in states.sensor -%}
-                  {%- if state.attributes.friendly_name is defined and 'Fulton St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                    {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                    {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
-                      {%- set ns.north = ns.north + [state] -%}
-                    {%- else -%}
-                      {%- set ns.south = ns.south + [state] -%}
-                    {%- endif -%}
-                  {%- endif -%}
-                {%- endfor %}
                 [
                   { "type": "section", "label": "Northbound" },
-                  {% for state in ns.north -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and 'Fulton St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                   { "type": "section", "label": "Southbound" },
-                  {% for state in ns.south -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and 'Fulton St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if not headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St|Court Sq') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                 ]
             sort:
@@ -132,33 +129,32 @@ views:
               show_header_toggle: false
             filter:
               template: |
-                {% set ns = namespace(north=[], south=[]) %}
-                {% for state in states.sensor -%}
-                  {%- if state.attributes.friendly_name is defined and 'Lafayette Av' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                    {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                    {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
-                      {%- set ns.north = ns.north + [state] -%}
-                    {%- else -%}
-                      {%- set ns.south = ns.south + [state] -%}
-                    {%- endif -%}
-                  {%- endif -%}
-                {%- endfor %}
                 [
                   { "type": "section", "label": "Northbound" },
-                  {% for state in ns.north -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and 'Lafayette Av' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                   { "type": "section", "label": "Southbound" },
-                  {% for state in ns.south -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and 'Lafayette Av' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if not headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                 ]
             sort:
@@ -172,33 +168,32 @@ views:
               show_header_toggle: false
             filter:
               template: |
-                {% set ns = namespace(north=[], south=[]) %}
-                {% for state in states.sensor -%}
-                  {%- if state.attributes.friendly_name is defined and '57 St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
-                    {%- set headsign = state.attributes.headsign | default('Unknown') -%}
-                    {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
-                      {%- set ns.north = ns.north + [state] -%}
-                    {%- else -%}
-                      {%- set ns.south = ns.south + [state] -%}
-                    {%- endif -%}
-                  {%- endif -%}
-                {%- endfor %}
                 [
                   { "type": "section", "label": "Northbound" },
-                  {% for state in ns.north -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and '57 St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                   { "type": "section", "label": "Southbound" },
-                  {% for state in ns.south -%}
-                    {
-                      "entity": "{{ state.entity_id }}",
-                      "name": "{{ state.attributes.route_id }} to {{ state.attributes.headsign }}",
-                      "secondary_info": "last-updated"
-                    },
+                  {% for state in states.sensor -%}
+                    {%- if state.attributes.friendly_name is defined and '57 St' in state.attributes.friendly_name and state.state not in ['unavailable', 'unknown'] -%}
+                      {%- set headsign = state.attributes.headsign | default('Unknown') -%}
+                      {%- if not headsign is search('Manhattan|Astoria|Forest Hills|Jamaica|96 St|205 St|Wakefield|Harlem|Ditmars|Midtown|Bedford|168 St|57 St') -%}
+                        {
+                          "entity": "{{ state.entity_id }}",
+                          "name": "{{ state.attributes.route_id }} to {{ headsign }}",
+                          "secondary_info": "last-updated"
+                        },
+                      {%- endif -%}
+                    {%- endif -%}
                   {%- endfor %}
                 ]
             sort:
